- Updated swagger.yaml - Created required docker files - Created Test for User functions - Fixed data strcts used for testing and documentation purposes
